# sequence-analysis

./: Cargo.toml  README.md
src/: alignment.rs  grid.rs  lib.rs  main.rs  mod.rs
src/Needleman_Wunsch/: Cargo.toml  alignment.rs  grid.rs  mod.rs
src/msa_by_hand/: align_by_hand.rs  bad_tree.rs  good_tree.rs  mod.rs  msa_by_hand.rs
src/needleman_wunsch/: alignment_helpers.rs  lib.rs  string.rs
src/smith_waterman/: alignment_helpers.rs  lib.rs  string.rs
