[package]
name = "sequence-analysis"
authors = ["Emily Light <emily_light@uri.edu>", "Morgan Prior <morgan_prior@uri.edu>" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abd-clam = { git = "https://github.com/URI-ABD/clam.git", branch = "master" }
